syntax = "proto3";

package api.blog.v1;

import "google/api/annotations.proto";

option go_package = "kratos-blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

service UserService {
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/users/login",
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/users/register",
      body: "*"
    };
  }
}

message LoginRequest {
  string email =  1;
  string password = 2;
}

message AuthResponse {
  string email = 1;
  string token = 2;
  string username = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
